đổi path tuyệt đối thành tương đối trong notebook

--- a/notebooks/02_Ridge_Training.ipynb
+++ b/notebooks/02_Ridge_Training.ipynb
@@ -22,7 +22,6 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 12,
       "metadata": {
         "id": "xV03TlRlmPF6"
@@ -77,7 +76,6 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 13,
       "metadata": {
         "id": "z3qXSgeZeRq-"
@@ -124,9 +122,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 14,
-
       "metadata": {
         "id": "T-cJni8ndDhN"
       },
@@ -134,9 +130,8 @@
       "source": [
         "def load_fold_data(fold_number):\n",
         "    \"\"\"Đọc dữ liệu của một fold từ file CSV.\"\"\"\n",
-        "    train_data = pd.read_csv(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_{fold_number}_train.csv')\n",
-        "    val_data = pd.read_csv(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_{fold_number}_val.csv')\n",
-
+        "    train_data = pd.read_csv(f'data/split/K-folds/fold_{fold_number}_train.csv')\n",
+        "    val_data = pd.read_csv(f'data/split/K-folds/fold_{fold_number}_val.csv')\n",
         "\n",
         "    # Tách biến đầu vào (cw1, mid-term, cw2) và biến đầu ra (final)\n",
         "    X_train = train_data[['cw1', 'mid-term', 'cw2']].values\n",
@@ -172,9 +167,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 15,
-
       "metadata": {
         "id": "qXeO0ksyddOv"
       },
@@ -220,9 +213,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 16,
-
       "metadata": {
         "id": "OZagMChfbiYo"
       },
@@ -261,9 +252,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 17,
-
       "metadata": {
         "id": "lry3VrYrcTKP"
       },
@@ -317,9 +306,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 18,
-
       "metadata": {
         "id": "9zU6U6INceqv"
       },
@@ -358,9 +345,7 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 19,
-
       "metadata": {
         "id": "4SvD9ZJNTMch"
       },
@@ -393,7 +378,6 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 20,
       "metadata": {
         "colab": {
@@ -402,7 +386,6 @@
         },
         "id": "VsK-CVdukJyX",
         "outputId": "603bc77e-f90e-488a-ffbb-4051bfe2949b"
-
       },
       "outputs": [
         {
@@ -446,7 +429,6 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 22,
       "metadata": {
         "colab": {
@@ -455,7 +437,6 @@
         },
         "id": "7A5_jo3-Ut7d",
         "outputId": "829d335c-80d7-497d-b940-59cf4b9a7f30"
-
       },
       "outputs": [
         {
@@ -470,9 +451,7 @@
         }
       ],
       "source": [
-
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/train_data.csv')\n",
-
+        "X_train, y_train = load_data_from(f'data/split/train_data.csv')\n",
         "w = ridge_regression(X_train, y_train, best_lamda)\n",
         "print('Trọng số w = ', w)\n",
         "np.save('ridge_model_weights.npy', w)\n"
@@ -504,7 +483,6 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 23,
       "metadata": {
         "colab": {
@@ -516,8 +494,7 @@
       },
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/test_data.csv')\n",
-
+        "X_test, y_test = load_data_from(f'data/split/test_data.csv')\n",
         "weights = np.load('ridge_model_weights.npy')  # Tải trọng số từ file\n",
         "y_pred = predict(X_test, weights)\n"
       ]
@@ -549,12 +526,10 @@
     },
     {
       "cell_type": "code",
-
       "execution_count": 24,
       "metadata": {
         "id": "v8xfJmtVkNiG",
         "outputId": "2140ceb4-36b1-4674-92fa-d29c48afacff"
-
       },
       "outputs": [
         {
@@ -596,7 +571,6 @@
         "\n",
         "\n"
       ]
-
     },
     {
       "cell_type": "markdown",
@@ -678,8 +652,8 @@
       "outputs": [],
       "source": [
         "def load_fold_data(fold_number):\n",
-        "    train_data = pd.read_csv(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_{fold_number}_train.csv')\n",
-        "    val_data = pd.read_csv(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_{fold_number}_val.csv')\n",
+        "    train_data = pd.read_csv(f'data/split/K-folds/fold_{fold_number}_train.csv')\n",
+        "    val_data = pd.read_csv(f'data/split/K-folds/fold_{fold_number}_val.csv')\n",
         "\n",
         "    # Tách biến đầu vào (cw1, mid-term, cw2) và biến đầu ra (final)\n",
         "    X_train = train_data[['cw1', 'mid-term', 'cw2']].values\n",
@@ -870,7 +844,7 @@
       },
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from('D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_0_train.csv')"
+        "X_train, y_train = load_data_from('data/split/K-folds/fold_0_train.csv')"
       ]
     },
     {
@@ -881,7 +855,7 @@
       },
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from('D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_0_train.csv')"
+        "X_test, y_test = load_data_from('data/split/K-folds/fold_0_train.csv')"
       ]
     },
     {
@@ -1083,7 +1057,7 @@
       },
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from('D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_0_val.csv')"
+        "X_train, y_train = load_data_from('data/split/K-folds/fold_0_val.csv')"
       ]
     },
     {
@@ -1094,7 +1068,7 @@
       },
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_0_val.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_0_val.csv')"
       ]
     },
     {
@@ -1226,7 +1200,7 @@
       },
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_1_train.csv')"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_1_train.csv')"
       ]
     },
     {
@@ -1237,7 +1211,7 @@
       },
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_1_train.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_1_train.csv')"
       ]
     },
     {
@@ -1342,7 +1316,7 @@
       },
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_1_val.csv')\n"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_1_val.csv')\n"
       ]
     },
     {
@@ -1353,7 +1327,7 @@
       },
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_1_val.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_1_val.csv')"
       ]
     },
     {
@@ -1463,7 +1437,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_2_train.csv')"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_2_train.csv')"
       ]
     },
     {
@@ -1472,7 +1446,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_2_train.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_2_train.csv')"
       ]
     },
     {
@@ -1569,7 +1543,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_2_val.csv')\n"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_2_val.csv')\n"
       ]
     },
     {
@@ -1578,7 +1552,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_2_val.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_2_val.csv')"
       ]
     },
     {
@@ -1675,7 +1649,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_3_train.csv')"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_3_train.csv')"
       ]
     },
     {
@@ -1684,7 +1658,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_3_train.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_3_train.csv')"
       ]
     },
     {
@@ -1781,7 +1755,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_3_val.csv')\n"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_3_val.csv')\n"
       ]
     },
     {
@@ -1790,7 +1764,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_3_val.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_3_val.csv')"
       ]
     },
     {
@@ -1887,7 +1861,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_4_train.csv')"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_4_train.csv')"
       ]
     },
     {
@@ -1896,7 +1870,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_4_train.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_4_train.csv')"
       ]
     },
     {
@@ -1993,7 +1967,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train, y_train = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_4_val.csv')\n"
+        "X_train, y_train = load_data_from(f'data/split/K-folds/fold_4_val.csv')\n"
       ]
     },
     {
@@ -2002,7 +1976,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from(f'D:/Project_ML/Student-Final-Grade-ML/data/split/K-folds/fold_4_val.csv')"
+        "X_test, y_test = load_data_from(f'data/split/K-folds/fold_4_val.csv')"
       ]
     },
     {
@@ -2137,7 +2111,7 @@
         }
       ],
       "source": [
-        "X_train, y_train = load_data_from('D:/Project_ML/Student-Final-Grade-ML/data/split/train_data.csv')\n",
+        "X_train, y_train = load_data_from('data/split/train_data.csv')\n",
         "w = ridge_regression(X_train, y_train, best_lamda)\n",
         "print('Trọng số w = ', w)\n",
         "np.save('ridge_model_weights.npy', w)"
@@ -2172,7 +2146,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_test, y_test = load_data_from('D:/Project_ML/Student-Final-Grade-ML/data/split/test_data.csv')\n",
+        "X_test, y_test = load_data_from('data/split/test_data.csv')\n",
         "weights = np.load('ridge_model_weights.npy')\n",
         "y_pred = predict(X_test, weights)"
       ]
@@ -2294,7 +2268,6 @@
         "\n",
         "\n"
       ]
-
     }
   ],
   "metadata": {
@@ -2315,9 +2288,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-
       "version": "3.12.6"
-
     }
   },
   "nbformat": 4,
